fix dark mode issue and add categories story

--- a/src/components/Combobox/components/ComboboxRenderers/ComboboxRenderers.module.scss
+++ b/src/components/Combobox/components/ComboboxRenderers/ComboboxRenderers.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: auto;
   width: 100%;
-  background-color: var(--primary-background-color);
+  background-color: var(--secondary-background-color);
 }
 
 .dividerContainer {
